# tidyplot

./: LICENSE  README.md  pyproject.toml
src/tidyplot/: plotting.py
tests/: test_plotting.py
